
syntax = "proto3";

// 账号操作结果
enum AccountOpResult
{
  AOR_NULL = 0;

  AOR_OK								= 1;  // 成功
  AOR_NAME_WRONG_LENGTH					= 2;  // 名字长度异常
  AOR_PASS_WRONG_LENGTH					= 3;  // 密码长度异常
  AOR_NAME_ALREADY_EXIST				= 4;  // 名字已存在
  AOR_NAME_NOT_EXIST					= 5;  // 名字不存在
  AOR_DB_INTERNAL_ERROR					= 6;  // 数据库内部错误
  AOR_PASS_WRONG_ERROR					= 7;  // 密码错误
  AOR_ID_OUT_RANGE						= 8;  // id范围越界
  AOR_ACCOUNT_LOCKED					= 9;  // 账号被锁
  AOR_SVC_MAINTENANCE   				= 10; // 服务维护中
  AOR_APPLE_IDENTITYTOKEN_EXCEPTION		= 11; // apple identity_token 解析异常
  AOR_BIND_SDK_ILLEGAL					= 12; // 绑定SDK验证失败
  AOR_BIND_REPEAT						= 13; // 重复绑定
  AOR_BIND_EXIST						= 14; // 第三方账号已注册
  AOR_BIND_DB_ERROR						= 17; // 绑定数据操作错误
};

// 消息ID
enum AuthMsgID {
  AUTH_MSG_NULL					= 0;// 禁用
	
  // 客户端消息 (60000-65535)

  AUTH_MSG_C2A_REGISTER_REQ			= 61001; // 注册请求
  AUTH_MSG_A2C_REGISTER_REP			= 61002; // 注册返回

  AUTH_MSG_C2A_LOGON_CHALLENGE		= 62001; // 登录请求
  AUTH_MSG_A2C_LOGON_ASK			= 62002; // 登录询问
  AUTH_MSG_C2A_LOGON_PROOF			= 62003; // 登录凭据
  AUTH_MSG_A2C_LOGON_REP			= 62004; // 登录结果

  AUTH_MSG_A2C_LOGON_REGION			= 62005; // 登录Logic信息

  AUTH_MSG_C2A_LOGON_SDK			= 62006; // SDK登录
  AUTH_MSG_C2A_LOGON_SUPER			= 62008; // 无密码登录
  AUTH_MSG_C2A_LOGON_APPLE			= 62010; // Apple登录
  AUTH_MSG_C2A_LOGON_APPLE_GAMECENTER = 62011; // Apple GameCenter登录

  AUTH_MSG_C2A_LOGON_GOOGLE			= 62012; // GooglePlay登录
  AUTH_MSG_C2A_LOGON_FACEBOOK		= 62013; // Facebook登录
  
  AUTH_MSG_C2A_BIND_REQ				= 62014; // 绑定
  AUTH_MSG_A2C_BIND_REP				= 62015; // 绑定结果
}

enum DefaultAccountBindType
{
  DEFAULT_ACCOUNT_BIND_TYPE_NULL		= 0; // 未绑定

  DEFAULT_ACCOUNT_BIND_TYPE_APPLE		= 1; // 苹果
  DEFAULT_ACCOUNT_BIND_TYPE_GOOGLE		= 2; // Google
  DEFAULT_ACCOUNT_BIND_TYPE_FACEBOOK	= 3; // Facebook
};

// 客户端消息

message c2a_register_req {
  string username = 1;
  string s = 2;
  string v = 3;
  string email = 4;
  string phone = 5;
}

message a2c_register_rep {
  AccountOpResult result = 1;
}

message c2a_logon_challenge {
  string username = 1;
}

message a2c_logon_ask {
  string public_key = 1;
  string s = 2;
}

message c2a_logon_proof {
  string A = 1;
  string M1 = 2;
}

message a2c_logon_rep {
  AccountOpResult				result			= 1; // 登陆结果(登陆失败不一定能收到)
  string						username		= 2; // 账号名
  uint32						account_id		= 3; // 账号id
  uint32						guid			= 4; // auth guid
  int32							sdk_code		= 5; // 平台sdk返回码
  int32							age				= 6; // 年龄
  bool							is_identified	= 7; // 是否实名
  int64							unlock_time		= 8; // 解锁时间(0:永久封号)
  string						session_key		= 9; // 密钥
  DefaultAccountBindType		bind_type		= 10; // enum DefaultAccountBindType
}

message a2c_logon_region {
  string ip             = 1;    // logic ip
  uint32 port           = 2;    // logic 端口
  string http_address   = 3;    // logic_http 地址ip:port
}

message c2a_logon_sdk {
  string    open_id         = 1; // 账号名
  string	app_id			= 2;
  string	cch_id			= 3;
  string	access_token	= 4; // 登陆令牌
  string	app_key			= 5;
  string	sdk_type		= 6; // login_url中sdk key
}

message c2a_logon_apple {
  string    user_identifier        = 1; // 账号名
  string    identity_token         = 2; // JSON Web Token (JWT) 只有第一次登录注册有用,以后都只看账号名
  string 	session_key 		   = 3; // 密钥
}

message c2a_logon_google {
  string	google_id		= 1; // Google ID
  string    id_token        = 2; // id_token
}

message c2a_logon_facebook {
  string 	facebook_id		= 1; // Facebook ID
  string 	access_token	= 2; // access_token
}

message c2a_logon_super {
  string	username = 2;
}

message c2a_logon_apple_gamecenter{
	string	user_identifier		= 1; // 账号名
	//string 	public_key_url		= 2; // 获取公钥的url
	//string 	signature			= 3; // 签名
	//string 	salt				= 4; // 随机NSString; GameKit uses to compute the hash and randomize it
	//string 	timestamp			= 5; // 签名生成时间戳
}

// 游客账号绑定--------------------------------------------------------------------------------------------------------------

message c2a_bind_req {
  DefaultAccountBindType		bind_type				= 1; // enum DefaultAccountBindType
  string						platform_userid			= 2; // 账号名
  string 						platform_token			= 3; // token
}

message a2c_bind_rep {
  AccountOpResult	result			= 1;
}

// --------------------------------------------------------------------------------------------------------------游客账号绑定
